# Sena1996-AI

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SETUP.md  USAGE.md  install.sh  setup.sh
.claude/: settings.json
.claude/commands/: deep-think.md  sena-always-off.md  sena-always-on.md  sena-analyze.md  sena-ancient.md  sena-auto.md  sena-brilliant.md  sena-code.md  sena-format-table.md  sena-git.md  sena-health.md  sena-hub-messages.md  sena-memory.md  sena-metrics.md  sena-network.md  sena-peers.md  sena-search.md  sena-status.md  sena-test.md  sena-think.md  sena-tools.md  sena-verify.md  session-name.md  session-start.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-config.json  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-desktop.yml  release.yml
benches/: benchmarks.rs
commands/: deep-think.md  sena-always-off.md  sena-always-on.md  sena-analyze.md  sena-code.md  sena-format-table.md  sena-health.md  sena-metrics.md  sena-status.md  sena-test.md  sena-verify.md  session-name.md  session-start.md
config/: CLAUDE.md.template  settings.json.template
crates/sena-collab/: Cargo.toml
crates/sena-collab/src/: agent.rs  consensus.rs  error.rs  lib.rs  message.rs  orchestrator.rs  permission.rs  routing.rs  session.rs
crates/sena-providers/: Cargo.toml
crates/sena-providers/src/: claude.rs  config.rs  error.rs  gemini.rs  lib.rs  metadata.rs  mistral.rs  ollama.rs  openai.rs  provider.rs  router.rs  types.rs
docs/: AI_COLLABORATION_ARCHITECTURE.md
examples/: basic_usage.rs  multi_agent.rs
homebrew/: README.md  sena.rb
hooks/: auto-progress.sh  conversation-progress.sh  permission-request.sh  post-tool-use.sh  sena-daemon-client.sh  sena-enforcer.sh  user-prompt-submit.sh
memory/: architecture-patterns.md  performance-patterns.md  reasoning-frameworks.md  security-patterns.md
scripts/: install-local.sh  sena-activate  sena-banner  sena-check  sena-latest  sena-progress  sena-progress-demo  sena-status  sena-status-v3.3
sena-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
sena-ui/scripts/: generate-icons.sh
sena-ui/src/: App.tsx  index.css
sena-ui/src-tauri/: Cargo.toml  tauri.conf.json
sena-ui/src-tauri/capabilities/: default.json
sena-ui/src-tauri/icons/: icon.icns
sena-ui/src-tauri/src/: credentials.rs  lib.rs  main.rs
sena-ui/src/components/: DynamicAuthForm.tsx  Layout.tsx  ProviderConfigModal.tsx  Toast.tsx
sena-ui/src/lib/: tauri.ts
sena-ui/src/pages/: Chat.tsx  Dashboard.tsx  Devil.tsx  Features.tsx  Guardian.tsx  Memory.tsx  Peers.tsx  Providers.tsx  Sessions.tsx  Settings.tsx  Tools.tsx
sena-ui/src/store/: index.ts
sena-ui/src/types/: index.ts
src/: lib.rs  main.rs
src/agents/: android.rs  backend.rs  ios.rs  iot.rs  mod.rs  web.rs
src/ancient/: constraint_feature.rs  first_principles.rs  harmony_validation.rs  millennium_test.rs  mod.rs  negative_space.rs  relationship_model.rs  self_healing.rs
src/base/: component.rs  interfaces.rs  mod.rs  registry.rs
src/cli/: args.rs  commands.rs  mod.rs
src/config/: mod.rs
src/daemon/: background.rs  mod.rs
src/devil/: aggregator.rs  config.rs  consensus.rs  error.rs  executor.rs  mod.rs  synthesizer.rs
src/evolution/: feedback.rs  learner.rs  mod.rs  optimizer.rs
src/git/: mod.rs
src/guardian/: config.rs  error.rs  executor.rs  hallucination.rs  interceptor.rs  mod.rs  validator.rs
src/hooks/: handler.rs  mod.rs
src/hub/: conflicts.rs  context.rs  identity.rs  messages.rs  mod.rs  peers.rs  session.rs  socket.rs  state.rs  tasks.rs
src/integration/: auto_format.rs  mod.rs
src/intelligence/: agents.rs  autonomous.rs  mod.rs  routing.rs  skills.rs  thinking.rs
src/knowledge/: architecture.rs  memory.rs  mod.rs  performance.rs  reasoning.rs  security.rs
src/mcp/: handlers.rs  mod.rs  protocol.rs  server.rs
src/memory/: mod.rs  search.rs  semantic.rs  store.rs
src/metrics/: health.rs  mod.rs
src/network/: auth.rs  discovery.rs  mod.rs  peer.rs  protocol.rs  tcp.rs  tls.rs
src/output/: format_box.rs  mod.rs  progress.rs  streaming.rs  tables.rs  websocket.rs
src/session/: manager.rs  mod.rs
src/sync/: crdt.rs  mod.rs  offline.rs
src/tools/: builtin.rs  executor.rs  mod.rs  registry.rs
tests/: cli_test.rs  integration_test.rs
