[package]
name = "sena_v9"
version = "9.0.2"
edition = "2021"
authors = ["SENA Team"]
description = "SENA Controller v9.0 - Complete CLI Commands with Knowledge, Intelligence & Evolution Systems"
license = "MIT"
repository = "https://github.com/sena/sena-controller"
keywords = ["ai", "ancient-wisdom", "truth-embedded", "knowledge", "intelligence", "evolution"]
categories = ["science", "algorithms"]

[lib]
name = "sena_v9"
path = "src/lib.rs"

[[bin]]
name = "sena"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full", "signal"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Hashing
sha2 = "0.10"
hex = "0.4"

# Regex for pattern matching
regex = "1.10"

# Lazy initialization
once_cell = "1.19"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Collections
indexmap = { version = "2.0", features = ["serde"] }

# System utilities
dirs = "5.0"
hostname = "0.4"

# Configuration
toml = "0.8"

# CLI parsing
clap = { version = "4.4", features = ["derive"] }

# JSON-RPC for MCP
jsonrpc-core = "18.0"

# Terminal/TTY detection
atty = "0.2"

# Colored output
colored = "2.1"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
