[workspace]
members = [".", "crates/sena-providers", "crates/sena-collab"]
exclude = ["sena-ui/src-tauri"]
resolver = "2"

[package]
name = "sena1996-ai"
version = "13.1.3"
edition = "2021"
authors = ["Sena1996 <sena1996@github.com>"]
description = "Sena1996 AI Tool - Make Your AI Collaborative and Smarter"
license = "MIT"
repository = "https://github.com/Sena1996/Sena1996-AI"
keywords = ["ai", "collaboration", "network", "claude", "mcp", "intelligence"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "sena1996_ai"
path = "src/lib.rs"

[[bin]]
name = "sena"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full", "signal"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Hashing
sha2 = "0.10"
hex = "0.4"

# Regex for pattern matching
regex = "1.10"

# Lazy initialization
once_cell = "1.19"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Collections
indexmap = { version = "2.0", features = ["serde"] }

# System utilities
dirs = "5.0"
hostname = "0.4"
whoami = "1.5"

# Configuration
toml = "0.9"

# CLI parsing
clap = { version = "4.4", features = ["derive"] }

# JSON-RPC for MCP
jsonrpc-core = "18.0"

# Terminal/TTY detection
atty = "0.2"

# Colored output
colored = "2.1"

# Network - mDNS discovery
mdns-sd = "0.11"

# Network - TLS
tokio-rustls = "0.25"
rustls = "0.22"
rustls-pemfile = "2.0"
rcgen = "0.14"

# Random for tokens
rand = "0.8"

# Base64 encoding
base64 = "0.21"

# Glob pattern matching
glob = "0.3"

# Futures for parallel execution
futures = "0.3"

# HTTP client for web tools
reqwest = { version = "0.11", features = ["json"] }

# Multi-provider AI integration
sena-providers = { version = "13.1.3", path = "crates/sena-providers" }

# AI-to-AI collaboration
sena-collab = { version = "13.1.3", path = "crates/sena-collab" }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
