[package]
name = "sena-collab"
version = "13.1.3"
edition = "2021"
authors = ["Sena1996 <sena1996@github.com>"]
description = "AI-to-AI Collaboration Framework for Sena1996 AI Tool"
license = "MIT"
repository = "https://github.com/Sena1996/Sena1996-AI"
keywords = ["ai", "collaboration", "multi-agent", "orchestration"]

[dependencies]
async-trait = "0.1"
tokio = { version = "1.0", features = ["full", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
dirs = "5.0"

sena-providers = { version = "13.1.3", path = "../sena-providers" }

[dev-dependencies]
tokio-test = "0.4"
