[workspace]

[package]
name = "sena-ui"
version = "1.0.0"
description = "SENA AI Collaboration Hub Desktop Application"
authors = ["Sena1996"]
license = "MIT"
repository = "https://github.com/Sena1996/Sena1996-AI"
edition = "2021"

[lib]
name = "sena_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
base64 = "0.22"
hostname = "0.4"

sena-providers = { path = "../../crates/sena-providers" }
sena-collab = { path = "../../crates/sena-collab" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
